--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
-    <string name="app_name">Intro_proyecto_DAM2</string>
+    <string name="app_name">NurseApp</string>
+
+    <string name="subtitle_es">Gestión de guardia inteligente</string>
+    <string name="btn_login_es">Iniciar Sesión</string>
+    <string name="btn_register_es">Registrarse</string>
+    <string name="btn_search_es">Buscar Enfermero</string>
+    <string name="btn_info_es">Información Enfermeros</string>
+
+    <string name="menu_lang_to_en">Cambiar a Inglés</string>
+    <string name="menu_theme_light_es">Cambiar a Modo Claro</string>
+    <string name="menu_theme_dark_es">Cambiar a Modo Oscuro</string>
+
+    <string name="subtitle_en">Smart Shift Management</string>
+    <string name="btn_login_en">Login</string>
+    <string name="btn_register_en">Register</string>
+    <string name="btn_search_en">Search Nurse</string>
+    <string name="btn_info_en">Nurse Info</string>
+
+    <string name="menu_lang_to_es">Switch to Spanish</string>
+    <string name="menu_theme_light_en">Switch to Light Mode</string>
+    <string name="menu_theme_dark_en">Switch to Dark Mode</string>
 </resources>
